# serka

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Dockerfile  README.md  bedrock-example.ipynb  bounce-dev.sh  compose.yml  config-podman.yml  config.yaml  config.yml  container-compose-dev.yml  container-compose.yml  dcup.sh  docker-compose-dev.yml  docker-compose.yml  docker.env  ollama-entrypoint.sh  podman-compose.yml  podman-compose[aws].yml  pyproject.toml  test.ipynb
.github/workflows/: test.yml
docker/: docker-compose.dev.yml
mcp/: mcp-server.py
mcp-server/: Containerfile  README.md  pyproject.toml
mcp-server/src/serka-mcp/: app.py  main.py  models.py  prompts.py  queries.py  tools.py
mcp-server/tests/: http-test.py
notebooks/: agentic-example.ipynb  bedrock-example.ipynb  eidc_hay_comp.ipynb  graph.ipynb  query-branching.ipynb  test.ipynb
scripts/: haystack_bedrock_test.py  ingest-data.py  test_bedrock.py  test_legilo.py
src/serka/: __init__.py  cache.py  config.py  converters.py  dao.py  eidc_fetcher.py  feedback.py  fetchers.py  jobs.py  main.py  models.py  pipelines.py  prompts.py  settings.py
src/serka/graph/: builder.py  embedders.py  extractors.py  joiners.py  md_test.md  models.py  readers.py  writers.py
src/serka/routers/: chat.py  collections.py  dependencies.py  feedback.py  graph.py  mock.py  query.py  tasks.py
static/css/: style.css
static/html/: index.html
static/js/: app.js
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/scripts/: install_podman.sh  setup.sh
tests/: test_app.py  test_converters.py  test_extractors.py  test_fetchers.py
ui/: Containerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  constants.ts  main.tsx  theme.ts
ui/src/api/: chat.ts  feedback.ts  search.ts
ui/src/components/: AISummary.tsx  DatasetResultCard.tsx  FeedbackWidget.tsx  GeneralFeedback.tsx  Layout.tsx  PrivacyConsent.tsx  PrivacyPolicyDialog.tsx  ResultCard.tsx  SearchBar.tsx
ui/src/pages/: ChatPage.tsx  LandingPage.tsx  ResultsPage.tsx
ui/src/stores/: appStore.ts  chatStore.ts  searchStore.ts
