[project]
name = "mcp-server"
version = "0.1.0"
description = "Serka MCP (Model Context Protocol) server. Enables Serka to make use of agentic tools."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Matthew Coole", email = "matcoo@ceh.ac.uk" }
]
dependencies = [
    "amazon-bedrock-haystack>=3.9.1",
    "fastmcp>=2.11.3",
    "geopy>=2.4.1",
    "neo4j>=5.28.1",
    "requests>=2.32.3",
]
